# Copyright (c) 2024-2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("//foundation/multimedia/player_framework/config.gni")

ohos_executable("audio_haptic_test") {
  install_enable = false
  sources = [
    "audio_haptic_test.cpp",
    "./../unittest/common/src/audio_haptic_test_common.cpp",
  ]

  cflags = [
    "-std=c++17",
    "-Wall",
    "-Werror",
    "-fno-access-control",
  ]

  sanitize = {
    cfi = true
    cfi_cross_dso = true
  }

  deps = [
    "./../../frameworks/native/audio_haptic:audio_haptic",
    "./../../frameworks/native/soundpool:soundpool_client",
    "./../../interfaces/inner_api/native:media_client",
  ]

  include_dirs = [
    "./../../frameworks/native/audio_haptic",
    "./../../interfaces/inner_api/native",
    "./../unittest/common/include",
  ]

  external_deps = [
    "access_token:libaccesstoken_sdk",
    "access_token:libnativetoken_shared",
    "access_token:libtokensetproc_shared",
    "audio_framework:audio_client",
    "bounds_checking_function:libsec_shared",
    "c_utils:utils",
    "hilog:libhilog",
    "ipc:ipc_single",
  ]

  subsystem_name = "multimedia"
  part_name = "player_framework"
}