# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

###############################################################################
MEDIA_ROOT_DIR = "//foundation/multimedia/player_framework/test/fuzztest/"
group("fuzztest") {
  testonly = true
  deps = []
  deps += [
    # deps file
    "$MEDIA_ROOT_DIR/avcodec_fuzztest/acodecconfigure_fuzzer:ACodecConfigureFuzzTest",
    "$MEDIA_ROOT_DIR/avcodec_fuzztest/acodecfile_fuzzer:ACodecFileFuzzTest",
    "$MEDIA_ROOT_DIR/avcodec_fuzztest/vcodecconfigure_fuzzer:VCodecConfigureFuzzTest",
    "$MEDIA_ROOT_DIR/avcodec_fuzztest/vcodecfile_fuzzer:VCodecFileFuzzTest",
    "$MEDIA_ROOT_DIR/avmetadata_fuzztest/avmetadatafetchframeattime_fuzzer:AVmetadataFetchFrameAtTimeFuzzTest",
    "$MEDIA_ROOT_DIR/avmetadata_fuzztest/avmetadatafile_fuzzer:AVmetadataFileFuzzTest",
    "$MEDIA_ROOT_DIR/avmetadata_fuzztest/avmetadataresolvemetadata_fuzzer:AVmetadataResolveMetadataFuzzTest",
    "$MEDIA_ROOT_DIR/avmetadata_fuzztest/avmetadatasetsource_fuzzer:AVmetadataSetSourceFuzzTest",
    "$MEDIA_ROOT_DIR/player_fuzztest/playerfile_fuzzer:PlayerFileFuzzTest",
    "$MEDIA_ROOT_DIR/player_fuzztest/playerseek_fuzzer:PlayerSeekFuzzTest",
    "$MEDIA_ROOT_DIR/player_fuzztest/playerservicestub_fuzzer:PlayerServiceStubFuzzTest",
    "$MEDIA_ROOT_DIR/player_fuzztest/playersetvolume_fuzzer:PlayerSetVolumeFuzzTest",
    "$MEDIA_ROOT_DIR/recorder_fuzztest/recordersetaudiochannels_fuzzer:RecorderSetAudioChannelsFuzzTest",
    "$MEDIA_ROOT_DIR/recorder_fuzztest/recordersetaudiochannelsnum_fuzzer:RecorderSetAudioChannelsNumFuzzTest",
    "$MEDIA_ROOT_DIR/recorder_fuzztest/recordersetaudioencoder_fuzzer:RecorderSetAudioEncoderFuzzTest",
    "$MEDIA_ROOT_DIR/recorder_fuzztest/recordersetaudioencodingbitrate_fuzzer:RecorderSetAudioEncodingBitRateFuzzTest",
    "$MEDIA_ROOT_DIR/recorder_fuzztest/recordersetaudiosamplerate_fuzzer:RecorderSetAudioSampleRateFuzzTest",
    "$MEDIA_ROOT_DIR/recorder_fuzztest/recordersetaudiosource_fuzzer:RecorderSetAudioSourceFuzzTest",
    "$MEDIA_ROOT_DIR/recorder_fuzztest/recordersetcapturerate_fuzzer:RecorderSetCaptureRateFuzzTest",
    "$MEDIA_ROOT_DIR/recorder_fuzztest/recordersetfilesplitduration_fuzzer:RecorderSetFileSplitDurationFuzzTest",
    "$MEDIA_ROOT_DIR/recorder_fuzztest/recordersetlocation_fuzzer:RecorderSetLocationFuzzTest",
    "$MEDIA_ROOT_DIR/recorder_fuzztest/recordersetorientationhint_fuzzer:RecorderSetOrientationHintFuzzTest",
    "$MEDIA_ROOT_DIR/recorder_fuzztest/recordersetparameter_fuzzer:RecorderSetParameterFuzzTest",
    "$MEDIA_ROOT_DIR/recorder_fuzztest/recordersetvideoencoder_fuzzer:RecorderSetVideoEncoderFuzzTest",
    "$MEDIA_ROOT_DIR/recorder_fuzztest/recordersetvideoframerate_fuzzer:RecorderSetVideoFrameRateFuzzTest",
    "$MEDIA_ROOT_DIR/recorder_fuzztest/recordersetvideosize_fuzzer:RecorderSetVideoSizeFuzzTest",
    "$MEDIA_ROOT_DIR/recorder_fuzztest/recordersetvideosource_fuzzer:RecorderSetVideoSourceFuzzTest",
  ]
}
###############################################################################
