# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

###############################################################################

group("fuzztest") {
  testonly = true
  deps = []
  deps += [
    # deps file
    "avcodec_fuzztest/acodecconfigure_fuzzer:ACodecConfigureFuzzTest",
    "avcodec_fuzztest/acodecfile_fuzzer:ACodecFileFuzzTest",
    "avcodec_fuzztest/vcodecconfigure_fuzzer:VCodecConfigureFuzzTest",
    "avcodec_fuzztest/vcodecfile_fuzzer:VCodecFileFuzzTest",
    "avmetadata_fuzztest/avmetadatafetchframeattime_fuzzer:AVmetadataFetchFrameAtTimeFuzzTest",
    "avmetadata_fuzztest/avmetadatafile_fuzzer:AVmetadataFileFuzzTest",
    "avmetadata_fuzztest/avmetadataresolvemetadata_fuzzer:AVmetadataResolveMetadataFuzzTest",
    "avmetadata_fuzztest/avmetadatasetsource_fuzzer:AVmetadataSetSourceFuzzTest",
    "avmetadata_fuzztest/avmetadatastub_fuzzer:AVmetadataStubFuzzTest",
    "player_fuzztest/playerfile_fuzzer:PlayerFileFuzzTest",
    "player_fuzztest/playerseek_fuzzer:PlayerSeekFuzzTest",
    "player_fuzztest/playerservicestub_fuzzer:PlayerServiceStubFuzzTest",
    "player_fuzztest/playersetvolume_fuzzer:PlayerSetVolumeFuzzTest",
    "player_fuzztest/playerstub_fuzzer:PlayerStubFuzzTest",
    "recorder_fuzztest/recordersetaudiochannels_fuzzer:RecorderSetAudioChannelsFuzzTest",
    "recorder_fuzztest/recordersetaudiochannelsnum_fuzzer:RecorderSetAudioChannelsNumFuzzTest",
    "recorder_fuzztest/recordersetaudioencoder_fuzzer:RecorderSetAudioEncoderFuzzTest",
    "recorder_fuzztest/recordersetaudioencodingbitrate_fuzzer:RecorderSetAudioEncodingBitRateFuzzTest",
    "recorder_fuzztest/recordersetaudiosamplerate_fuzzer:RecorderSetAudioSampleRateFuzzTest",
    "recorder_fuzztest/recordersetaudiosource_fuzzer:RecorderSetAudioSourceFuzzTest",
    "recorder_fuzztest/recordersetcapturerate_fuzzer:RecorderSetCaptureRateFuzzTest",
    "recorder_fuzztest/recordersetdatasource_fuzzer:RecorderSetDataSourceFuzzTest",
    "recorder_fuzztest/recordersetfilesplitduration_fuzzer:RecorderSetFileSplitDurationFuzzTest",
    "recorder_fuzztest/recordersetlocation_fuzzer:RecorderSetLocationFuzzTest",
    "recorder_fuzztest/recordersetorientationhint_fuzzer:RecorderSetOrientationHintFuzzTest",
    "recorder_fuzztest/recordersetparameter_fuzzer:RecorderSetParameterFuzzTest",
    "recorder_fuzztest/recordersetvideoencoder_fuzzer:RecorderSetVideoEncoderFuzzTest",
    "recorder_fuzztest/recordersetvideoframerate_fuzzer:RecorderSetVideoFrameRateFuzzTest",
    "recorder_fuzztest/recordersetvideosize_fuzzer:RecorderSetVideoSizeFuzzTest",
    "recorder_fuzztest/recordersetvideosource_fuzzer:RecorderSetVideoSourceFuzzTest",
    "screen_capture_fuzztest/screencaptureaudioconfigure_fuzzer:ScreenCaptureAudioConfigureFuzzTest",
    "screen_capture_fuzztest/screencapturecapturemode_fuzzer:ScreenCaptureCaptureModeFuzzTest",
    "screen_capture_fuzztest/screencapturevideoconfigure_fuzzer:ScreenCaptureVideoConfigureFuzzTest",
  ]
}
###############################################################################
