# Copyright (c) 2022-2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/ohos.gni")
import("//foundation/multimedia/player_framework/config.gni")

###############################################################################

group("fuzztest") {
  testonly = true
  deps = []
  deps += [
    # deps file
    "avmetadata_fuzztest/avmetadatafetchframeattime_fuzzer:AVmetadataFetchFrameAtTimeFuzzTest",
    "avmetadata_fuzztest/avmetadatafile_fuzzer:AVmetadataFileFuzzTest",
    "avmetadata_fuzztest/avmetadatahelper_fuzzer:AVmetadataHelperFuzzTest",
    "avmetadata_fuzztest/avmetadatahelperdatasrc_fuzzer:AVmetadataHelperDataSrcFuzzTest",
    "avmetadata_fuzztest/avmetadatahelperdatasrcconcurrent_fuzzer:AVmetadataHelperDataSrcConCurrentFuzzTest",
    "avmetadata_fuzztest/avmetadataresolvemetadata_fuzzer:AVmetadataResolveMetadataFuzzTest",
    "avmetadata_fuzztest/avmetadatasetsource_fuzzer:AVmetadataSetSourceFuzzTest",
    "avmetadata_fuzztest/avmetadatastub_fuzzer:AVmetadataStubFuzzTest",
    "avmetadata_fuzztest/avmetadatastublocal_fuzzer:AVmetadataStubLocalFuzzTest",
    "lowpoweravsink_fuzztest/lowpoweraudiosink_fuzzer:LowPowerAudioSinkFuzzTest",
    "lowpoweravsink_fuzztest/lowpoweraudiosinkconcurrent_fuzzer:LowPowerAudioSinkconcurrentFuzzTest",
    "lowpoweravsink_fuzztest/lowpowervideosink_fuzzer:LowPowerVideoSinkFuzzTest",
    "lowpoweravsink_fuzztest/lowpowervideosinkconcurrent_fuzzer:LowPowerVideoSinkconcurrentFuzzTest",
    "player_fuzztest/playerapi_fuzzer:PlayerApiFuzzTest",
    "player_fuzztest/playerdatasrc_fuzzer:PlayerDataSrcFuzzTest",
    "player_fuzztest/playerfile_fuzzer:PlayerFileFuzzTest",
    "player_fuzztest/playermp4_fuzzer:PlayerMp4FuzzTest",
    "player_fuzztest/playerseek_fuzzer:PlayerSeekFuzzTest",
    "player_fuzztest/playersei_fuzzer:PlayerSeiFuzzTest",
    "player_fuzztest/playerservicestub_fuzzer:PlayerServiceStubFuzzTest",
    "player_fuzztest/playersetvolume_fuzzer:PlayerSetVolumeFuzzTest",
    "player_fuzztest/playerstub_fuzzer:PlayerStubFuzzTest",
    "recorder_fuzztest/recorderservicestub_fuzzer:RecorderServiceStubFuzzTest",
    "recorder_fuzztest/recordersetaudiochannels_fuzzer:RecorderSetAudioChannelsFuzzTest",
    "recorder_fuzztest/recordersetaudiochannelsnum_fuzzer:RecorderSetAudioChannelsNumFuzzTest",
    "recorder_fuzztest/recordersetaudioencoder_fuzzer:RecorderSetAudioEncoderFuzzTest",
    "recorder_fuzztest/recordersetaudioencodingbitrate_fuzzer:RecorderSetAudioEncodingBitRateFuzzTest",
    "recorder_fuzztest/recordersetaudiosamplerate_fuzzer:RecorderSetAudioSampleRateFuzzTest",
    "recorder_fuzztest/recordersetaudiosource_fuzzer:RecorderSetAudioSourceFuzzTest",
    "recorder_fuzztest/recordersetcapturerate_fuzzer:RecorderSetCaptureRateFuzzTest",
    "recorder_fuzztest/recordersetdatasource_fuzzer:RecorderSetDataSourceFuzzTest",
    "recorder_fuzztest/recordersetfilesplitduration_fuzzer:RecorderSetFileSplitDurationFuzzTest",
    "recorder_fuzztest/recordersetlocation_fuzzer:RecorderSetLocationFuzzTest",
    "recorder_fuzztest/recordersetorientationhint_fuzzer:RecorderSetOrientationHintFuzzTest",
    "recorder_fuzztest/recordersetparameter_fuzzer:RecorderSetParameterFuzzTest",
    "recorder_fuzztest/recordersetvideoencoder_fuzzer:RecorderSetVideoEncoderFuzzTest",
    "recorder_fuzztest/recordersetvideoframerate_fuzzer:RecorderSetVideoFrameRateFuzzTest",
    "recorder_fuzztest/recordersetvideosize_fuzzer:RecorderSetVideoSizeFuzzTest",
    "recorder_fuzztest/recordersetvideosource_fuzzer:RecorderSetVideoSourceFuzzTest",
    "recorder_fuzztest/recorderservicestubfunctions_fuzzer:RecorderServiceStubFunctionsFuzzTest",
    "recorder_fuzztest/recordersetcaptureratefounction_fuzzer:RecorderSetCaptureRateFouncTionFuzzTest",
    "recorder_fuzztest/recorderservice_fuzzer:RecorderServiceFuzzTest",
    "recorder_fuzztest/recorderserviceconcurrent_fuzzer:RecorderServiceConCurrentFuzzTest",
    "transcoder_fuzztest/transcoderservicestub_fuzzer:TranscoderServiceStubFuzzTest",
    "transcoder_fuzztest/transcoderstub_fuzzer:TranscoderStubFuzzTest",
    "transcoder_fuzztest/transcoderservicestubconcurrent_fuzzer:TranscoderServiceStubConcurrentFuzzTest",
    "transcoder_fuzztest/transcoderstubconcurrent_fuzzer:TranscoderStubConcurrentFuzzTest",
  ]
  if (player_framework_support_screen_capture) {
    deps += [
      "screen_capture_fuzztest/screencaptureacquireaudiobuffer_fuzzer:ScreenCaptureAcquireAudioBufferFuzzTest",
      "screen_capture_fuzztest/screencaptureacquirevideobuffer_fuzzer:ScreenCaptureAcquireVideoBufferFuzzTest",
      "screen_capture_fuzztest/screencaptureaudiobitratefile_fuzzer:ScreenCaptureAudioBitRateFileFuzzTest",
      "screen_capture_fuzztest/screencaptureaudiochannels_fuzzer:ScreenCaptureAudioChannelsFuzzTest",
      "screen_capture_fuzztest/screencaptureaudiocodecformatfile_fuzzer:ScreenCaptureAudioCodecFormatFileFuzzTest",
      "screen_capture_fuzztest/screencaptureaudiosamplerate_fuzzer:ScreenCaptureAudioSampleRateFuzzTest",
      "screen_capture_fuzztest/screencaptureaudiosourcetype_fuzzer:ScreenCaptureAudioSourceTypeFuzzTest",
      "screen_capture_fuzztest/screencapturecapturemode_fuzzer:ScreenCaptureCaptureModeFuzzTest",
      "screen_capture_fuzztest/screencapturecontrollerservicestub_fuzzer:ScreenCaptureControllerServiceStubFuzzTest",
      "screen_capture_fuzztest/screencapturedatatype_fuzzer:ScreenCaptureDataTypeFuzzTest",
      "screen_capture_fuzztest/screencapturefileformatfile_fuzzer:ScreenCaptureFileFormatFileFuzzTest",
      "screen_capture_fuzztest/screencapturemonitorservice_fuzzer:ScreenCaptureMonitorServiceFuzzTest",
      "screen_capture_fuzztest/screencapturemonitorservicestub_fuzzer:ScreenCaptureMonitorServiceStubFuzzTest",
      "screen_capture_fuzztest/screencapturendkacquireaudiobuffer_fuzzer:ScreenCaptureNdkAcquireAudioBufferFuzzTest",
      "screen_capture_fuzztest/screencapturendkacquirevideobuffer_fuzzer:ScreenCaptureNdkAcquireVideoBufferFuzzTest",
      "screen_capture_fuzztest/screencapturendkaudiobitratefile_fuzzer:ScreenCaptureNdkAudioBitRateFileFuzzTest",
      "screen_capture_fuzztest/screencapturendkaudiochannels_fuzzer:ScreenCaptureNdkAudioChannelsFuzzTest",
      "screen_capture_fuzztest/screencapturendkaudiocodecformatfile_fuzzer:ScreenCaptureNdkAudioCodecFormatFileFuzzTest",
      "screen_capture_fuzztest/screencapturendkaudiosamplerate_fuzzer:ScreenCaptureNdkAudioSampleRateFuzzTest",
      "screen_capture_fuzztest/screencapturendkaudiosourcetype_fuzzer:ScreenCaptureNdkAudioSourceTypeFuzzTest",
      "screen_capture_fuzztest/screencapturendkcapturemode_fuzzer:ScreenCaptureNdkCaptureModeFuzzTest",
      "screen_capture_fuzztest/screencapturendkdatatype_fuzzer:ScreenCaptureNdkDataTypeFuzzTest",
      "screen_capture_fuzztest/screencapturendkfileformatfile_fuzzer:ScreenCaptureNdkFileFormatFileFuzzTest",
      "screen_capture_fuzztest/screencapturendkresizecanvas_fuzzer:ScreenCaptureNdkResizeCanvasFuzzTest",
      "screen_capture_fuzztest/screencapturendksetcanvasrotation_fuzzer:ScreenCaptureNdkSetCanvasRotationFuzzTest",
      "screen_capture_fuzztest/screencapturendksetmaxframerate_fuzzer:ScreenCaptureNdkSetMaxFrameRateFuzzTest",
      "screen_capture_fuzztest/screencapturendksetmicrophoneenabled_fuzzer:ScreenCaptureNdkSetMicrophoneEnabledFuzzTest",
      "screen_capture_fuzztest/screencapturendkshowcursor_fuzzer:ScreenCaptureNdkShowCursorFuzzTest",
      "screen_capture_fuzztest/screencapturendkskipprivacymode_fuzzer:ScreenCaptureNdkSkipPrivacyModeFuzzTest",
      "screen_capture_fuzztest/screencapturendkurlfile_fuzzer:ScreenCaptureNdkUrlFileFuzzTest",
      "screen_capture_fuzztest/screencapturendkvideobitratefile_fuzzer:ScreenCaptureNdkVideoBitRateFileFuzzTest",
      "screen_capture_fuzztest/screencapturendkvideocodecfile_fuzzer:ScreenCaptureNdkVideoCodecFileFuzzTest",
      "screen_capture_fuzztest/screencapturendkvideoframeheight_fuzzer:ScreenCaptureNdkVideoFrameHeightFuzzTest",
      "screen_capture_fuzztest/screencapturendkvideoframeratefile_fuzzer:ScreenCaptureNdkVideoFrameRateFileFuzzTest",
      "screen_capture_fuzztest/screencapturendkvideoframewidth_fuzzer:ScreenCaptureNdkVideoFrameWidthFuzzTest",
      "screen_capture_fuzztest/screencapturendkvideosourcetype_fuzzer:ScreenCaptureNdkVideoSourceTypeFuzzTest",
      "screen_capture_fuzztest/screencaptureresizecanvas_fuzzer:ScreenCaptureResizeCanvasFuzzTest",
      "screen_capture_fuzztest/screencaptureupdatesurface_fuzzer:ScreenCaptureUpdateSurfaceFuzzTest",
      "screen_capture_fuzztest/screencapturesaappinfo_fuzzer:ScreenCaptureSaAppInfoFuzzTest",
      "screen_capture_fuzztest/screencaptureserverstartcase_fuzzer:ScreenCaptureServerStartCaseFuzzTest",
      "screen_capture_fuzztest/screencaptureservicestub_fuzzer:ScreenCaptureServiceStubFuzzTest",
      "screen_capture_fuzztest/screencapturesetcanvasrotation_fuzzer:ScreenCaptureSetCanvasRotationFuzzTest",
      "screen_capture_fuzztest/screencapturesetmaxframerate_fuzzer:ScreenCaptureSetMaxFrameRateFuzzTest",
      "screen_capture_fuzztest/screencapturesetmicrophoneenabled_fuzzer:ScreenCaptureSetMicrophoneEnabledFuzzTest",
      "screen_capture_fuzztest/screencaptureshowcursor_fuzzer:ScreenCaptureShowCursorFuzzTest",
      "screen_capture_fuzztest/screencaptureskipprivacymode_fuzzer:ScreenCaptureSkipPrivacyModeFuzzTest",
      "screen_capture_fuzztest/screencaptureurlfile_fuzzer:ScreenCaptureUrlFileFuzzTest",
      "screen_capture_fuzztest/screencapturevideobitratefile_fuzzer:ScreenCaptureVideoBitRateFileFuzzTest",
      "screen_capture_fuzztest/screencapturevideocodecfile_fuzzer:ScreenCaptureVideoCodecFileFuzzTest",
      "screen_capture_fuzztest/screencapturevideoframeheight_fuzzer:ScreenCaptureVideoFrameHeightFuzzTest",
      "screen_capture_fuzztest/screencapturevideoframeratefile_fuzzer:ScreenCaptureVideoFrameRateFileFuzzTest",
      "screen_capture_fuzztest/screencapturevideoframewidth_fuzzer:ScreenCaptureVideoFrameWidthFuzzTest",
      "screen_capture_fuzztest/screencapturevideosourcetype_fuzzer:ScreenCaptureVideoSourceTypeFuzzTest",
      "screen_capture_fuzztest/avscreencaptureservicestub_fuzzer:AvScreenCaptureServiceStubFuzzTest",
      "screen_capture_fuzztest/screencaptureaudiocapturerwrapper_fuzzer:ScreenCaptureAudioCapturerWrapperFuzzTest",
      "screen_capture_fuzztest/screencapturendksetareahighlight_fuzzer:ScreenCaptureNdkSetAreaHighlightFuzzTest",	
      "screen_capture_fuzztest/screencapturesetareahighlight_fuzzer:ScreenCaptureSetAreaHighlightFuzzTest",
      "screen_capture_fuzztest/screencaptureaddsaconcurrent_fuzzer:ScreenCaptureAddSaConcurrentFuzzTest",
    ]
  }
}

###############################################################################

