# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/multimedia/player_framework/config.gni")

ohos_executable("media_demo") {
  include_dirs = [
    "./include",
    "./player",
    "./player/data_source",
    "./recorder",
    "./avmetadatahelper",
    "./avcodeclist",
    "./recorder_profiles",
    "./avcodecvenc",
    "./avcodecvdec",
    "./avmuxer",
    "//foundation/multimedia/player_framework/interfaces/inner_api/native",
    "//foundation/multimedia/player_framework/services/utils/include",
    "//graphic/graphic_2d/interfaces/innerkits/surface",
    "//foundation/graphic/graphic_2d/utils/sync_fence/export",
    "//drivers/peripheral/display/interfaces/include",
    "//foundation/multimedia/image_framework/interfaces/innerkits/include",
    "//foundation/window/window_manager/interfaces/innerkits/wm",
    "//third_party/libjpeg-turbo",
  ]

  cflags = [
    "-Wall",
    "-std=c++17",
    "-fno-rtti",
    "-fno-exceptions",
    "-fno-common",
    "-fstack-protector-strong",
    "-Wshadow",
    "-FPIC",
    "-FS",
    "-O2",
    "-D_FORTIFY_SOURCE=2",
    "-fvisibility=hidden",
    "-Wformat=2",
    "-Wdate-time",
    "-Werror",
    "-Wextra",
    "-Wimplicit-fallthrough",
    "-Wsign-compare",
    "-Wunused-parameter",
    "-Wno-deprecated-declarations",
  ]

  sources = [ "./media_demo.cpp" ]

  if (multimedia_player_framework_support_player) {
    sources += [
      "./player/data_source/media_data_source_demo_noseek.cpp",
      "./player/data_source/media_data_source_demo_seekable.cpp",
      "./player/player_demo.cpp",
    ]
  }

  if (multimedia_player_framework_support_recorder) {
    sources += [
      "./recorder/recorder_demo.cpp",
      "./recorder_profiles/recorder_profiles_demo.cpp",
    ]
  }

  if (multimedia_player_framework_support_codec) {
    sources += [
      "./avcodeclist/avcodeclist_demo.cpp",
      "./avcodecvdec/avcodec_vdec_demo.cpp",
      "./avcodecvenc/avcodec_venc_demo.cpp",
    ]
  }

  if (multimedia_player_framework_support_muxer) {
    sources += [ "./avmuxer/avmuxer_demo.cpp" ]
  }

  if (multimedia_player_framework_support_metadata) {
    sources += [ "./avmetadatahelper/avmetadatahelper_demo.cpp" ]
  }

  deps = [
    "//foundation/graphic/graphic_2d:libsurface",
    "//foundation/graphic/graphic_2d/frameworks/surface:surface",
    "//foundation/graphic/graphic_2d/rosen/modules/render_service_client:librender_service_client",
    "//foundation/graphic/graphic_2d/utils:sync_fence",
    "//foundation/multimedia/image_framework/interfaces/innerkits:image_native",
    "//foundation/multimedia/player_framework/services/utils:media_service_utils",
    "//foundation/window/window_manager/wm:libwm",
    "//third_party/libjpeg-turbo:turbojpeg_static",
  ]

  external_deps = [
    "c_utils:utils",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "multimedia_player_framework:media_client",
  ]
  install_enable = false

  part_name = "multimedia_player_framework"
  subsystem_name = "multimedia"
}
