# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/ohos/ace/ace.gni")
import("//foundation/multimedia/player_framework/config.gni")
MEDIA_ROOT_DIR = "//foundation/multimedia/player_framework/"

config("public_ffi_config") {
  include_dirs = []
}

ohos_shared_library("cj_avplayer_ffi") {
  public_configs = [ ":public_ffi_config" ]

  sanitize = {
    boundary_sanitize = true
    ubsan = true
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  include_dirs = [
    "$MEDIA_ROOT_DIR/frameworks/cj/avplayer",
    "$MEDIA_ROOT_DIR/frameworks/cj/mediasource",
    "$MEDIA_ROOT_DIR/interfaces/inner_api",
    "$MEDIA_ROOT_DIR/services/utils/include",
    "$MEDIA_ROOT_DIR/frameworks/js/avplayer",
    "$MEDIA_ROOT_DIR/frameworks/js/common",
  ]

  sources = [
    "$MEDIA_ROOT_DIR/frameworks/cj/mediasource/media_source_ffi.cpp",
    "cj_avplayer.cpp",
    "cj_avplayer_callback.cpp",
    "cj_avplayer_ffi.cpp",
    "cj_avplayer_utils.cpp",
    "cj_media_data_source_callback.cpp",
  ]

  deps = [
    "$MEDIA_ROOT_DIR/frameworks/js/avplayer:media_avplayer",
    "$MEDIA_ROOT_DIR/interfaces/inner_api/native:media_client",
    "$MEDIA_ROOT_DIR/services/utils:media_service_utils",
  ]

  external_deps = [
    "audio_framework:audio_client",
    "audio_framework:audio_foundation",
    "audio_framework:cj_multimedia_audio_ffi",
    "hilog:libhilog",
    "napi:ace_napi",
    "napi:cj_bind_ffi",
    "napi:cj_bind_native",
    "qos_manager:qos",
    "graphic_surface:surface",
  ]

  cflags = [
    "-D_FORTIFY_SOURCE=2",
  ]
  
  innerapi_tags = [ "platformsdk" ]
  subsystem_name = "multimedia"
  part_name = "player_framework"
}
