# Copyright (C) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/ohos/ace/ace.gni")
import("//foundation/multimedia/player_framework/config.gni")
import("./../../../multimedia_player_framework_aafwk.gni")

ohos_shared_library("cj_media_avrecorder_ffi") {
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  include_dirs = [
    "${multimedia_player_framework_path}/frameworks/cj/avrecorder",
    "${multimedia_player_framework_path}/services/utils/include",
    "${multimedia_player_framework_path}/interfaces/inner_api/native/soundpool/include",
    "${multimedia_player_framework_path}/interfaces/inner_api/native/",
  ]

  sources = [
    "${multimedia_player_framework_path}/frameworks/cj/avrecorder/avrecorder_ffi.cpp",
    "${multimedia_player_framework_path}/frameworks/cj/avrecorder/cj_avrecorder.cpp",
    "${multimedia_player_framework_path}/frameworks/cj/avrecorder/cj_avrecorder_callback.cpp",
  ]

  cflags = [
    "-fstack-protector-strong",
    "-O2",
    "-D_FORTIFY_SOURCE=2",
  ]

  cflags_cc = cflags

  deps = [
    "${multimedia_player_framework_path}/interfaces/inner_api/native:media_client",
    "${multimedia_player_framework_path}/services/utils:media_service_utils",
  ]

  external_deps = [
    "access_token:libaccesstoken_sdk",
    "access_token:libtokenid_sdk",
    "audio_framework:audio_client",
    "audio_framework:audio_renderer",
    "av_codec:av_codec_client",
    "c_utils:utils",
    "eventhandler:libeventhandler",
    "hilog:libhilog",
    "hisysevent:libhisysevent",
    "image_framework:image",
    "image_framework:image_native",
    "ipc:ipc_core",
    "ipc:ipc_single",
    "libuv:uv",
    "media_foundation:media_foundation",
    "napi:ace_napi",
    "napi:cj_bind_ffi",
    "napi:cj_bind_native",
    "qos_manager:qos",
    "window_manager:libdm",
  ]
  if (defined(ark_hybrid) && ark_hybrid) {
    external_deps += [ "runtime_core:libarkruntime" ]
  } else {
    external_deps += [ "ets_runtime:libark_jsruntime" ]
  }

  if (player_framework_support_auto_create_file) {
    external_deps += [ "media_library:cj_photoaccesshelper_ffi" ]
  }

  innerapi_tags = [ "platformsdk" ]
  part_name = "player_framework"
  subsystem_name = "multimedia"
}
