# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/ohos/ace/ace.gni")
import("//foundation/multimedia/player_framework/config.gni")
import("./../../../multimedia_player_framework_aafwk.gni")

config("public_ffi_config") {
  include_dirs = [ "include" ]
}

ohos_shared_library("cj_avscreen_capture_ffi") {
  public_configs = [ ":public_ffi_config" ]

  sanitize = {
    cfi = true
    cfi_cross_dso = true
    cfi_vcall_icall_only = true
    debug = false
  }
  include_dirs = [
    "${multimedia_player_framework_path}/frameworks/cj/avscreen_capture/include",
    "${multimedia_player_framework_path}/services/utils/include",
    "//foundation/multimedia/player_framework/interfaces/inner_api/native/",
  ]

  if (!defined(defines)) {
    defines = []
  }

  deps = [
    "${multimedia_player_framework_path}/interfaces/inner_api/native:media_client",
    "${multimedia_player_framework_path}/services/utils:media_service_utils",
  ]
  external_deps = [
    "ability_base:want",
    "ability_runtime:ability_manager",
    "ability_runtime:abilitykit_native",
    "ability_runtime:extensionkit_native",
    "ability_runtime:napi_base_context",
    "ability_runtime:wantagent_innerkits",
    "audio_framework:audio_client",
    "audio_framework:audio_renderer",
    "audio_framework:cj_multimedia_audio_ffi",
    "av_codec:av_codec_client",
    "bounds_checking_function:libsec_shared",
    "bundle_framework:appexecfwk_base",
    "c_utils:utils",
    "eventhandler:libeventhandler",
    "hilog:libhilog",
    "hisysevent:libhisysevent",
    "ipc:ipc_core",
    "ipc:ipc_single",
    "napi:ace_napi",
    "napi:cj_bind_ffi",
    "napi:cj_bind_native",
    "qos_manager:qos",
    "resource_management:global_resmgr",
  ]
  sources = [
    "src/avscreen_capture_ffi.cpp",
    "src/cj_avscreen_capture.cpp",
    "src/cj_avscreen_capture_callback.cpp",
  ]

  innerapi_tags = [ "platformsdk" ]
  subsystem_name = "multimedia"
  part_name = "player_framework"
}
